--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!--[if lte IE 8]><meta http-equiv="X-UA-Compatible" content="chrome=1" /><![endif]-->
 <script type="application/javascript" src="js/game.js"></script>
+<link rel="stylesheet" href="/Users/francodebattista/Desktop/d-ba-news/css/normalize.css">
+<link rel="stylesheet" href="snake.css">
+
 <title>My First Canvas Game</title>
 </head>
 <body>
     <h1>My First Canvas Game</h1>
     <p>
-        <canvas id="canvas" width="300" height="150" style="background:#999">
+        <canvas id="canvas">
             Canvas not supported by your browser.
         </canvas>
     </p>
