--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!--[if lte IE 8]><meta http-equiv="X-UA-Compatible" content="chrome=1" /><![endif]-->
-<script type="application/javascript" src="js/game.js"></script>
-<link rel="stylesheet" href="/Users/francodebattista/Desktop/d-ba-news/css/normalize.css">
+<link rel="stylesheet" href="normalizeSnake.css">
 <link rel="stylesheet" href="snake.css">
-
 <title>My First Canvas Game</title>
+<script type="application/javascript" src="js/game.js"></script>
 </head>
 <body>
     <h1>My First Canvas Game</h1>
